# Limo_Pathfinder

limo_bringup/launch/: limo_gmapping.launch  limo_navigation_diff.launch
limo_bringup/param/diff/: costmap_common_params.yaml  local_costmap_params.yaml
limo_gazebo_sim/launch/: limo_four_diff.launch
limo_gazebo_sim/meshes/: Final Assembly v20.stl
limo_gazebo_sim/models/Jewel/: model.config  model.sdf
limo_gazebo_sim/models/sitMap/: model.config  model.sdf
limo_gazebo_sim/worlds/: sit.world
limo_navigator/: CMakeLists.txt  package.xml
limo_navigator/launch/: limo_nav.launch
limo_navigator/map/: map.pgm
limo_navigator/scripts/: limo_navigator_code.cpp  line_tracker.py  line_tracker_v2.py
limo_pov/: CMakeLists.txt  package.xml
limo_pov/include/: ImageConverter.hpp
limo_pov/launch/: limo_pov_node.launch
limo_pov/scripts/: lane_line_detector.py  lane_tracer.cpp  limo_pov_node.cpp  mixed_color_picker.py  pure_color_extractor.py
